src/PLASMA/NDDL/test/nddl/error/UndefinedClassMember.nddl

class foo
{
    int x;

    foo()
    {
        x = 5;
        y = 8;
    }
}
